--- a/public/index.html
+++ b/public/index.html
@@ -13,13 +13,13 @@
     <link rel="css/stylesheet" href="/css/font-awesome.min.css"> 
     <link href="https://fonts.googleapis.com/css?family=Arvo|Graduate|Yanone+Kaffeesatz" rel="css/stylesheet">
     <script src="https://use.fontawesome.com/8e56555a3f.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    </head>
+    <link rel="stylesheet" href="/css/style.css">
+  </head>
   
   <body>
 
       <div id='root'></div>
-            <script src="bundle.js"></script>
+            <script src="/bundle.js"></script>
             <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
                 crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
